--- a/trunk/x10.man/paper/master.bib
+++ b/trunk/x10.man/paper/master.bib
@@ -2765,6 +2765,20 @@ year = 1993
     pages = "21--36"
 }
 
+@inproceedings{cvc,
+author    = "Clark Barrett and Sergey Berezin",
+title     = "{CVC L}ite: A New Implementation of the Cooperating Validity Checker",
+booktitle = "Proceedings of the $16^{th}$ International Conference on Computer Aided Verification (CAV '04)",
+series    = "Lecture Notes in Computer Science",
+volume    = 3114,
+publisher = "Springer-Verlag",
+editor    = "Rajeev Alur and Doron A. Peled",
+pages     = "515--518",
+month     = jul,
+year      = 2004,
+note      = "Boston, Massachusetts"
+}
+
 @inproceedings{omega,
   author = "William Pugh",
   title = "The Omega Test: A fast and practical integer programming algorithm for dependence analysis",
