--- a/trunk/x10.man/paper/examples.tex
+++ b/trunk/x10.man/paper/examples.tex
@@ -15,10 +15,18 @@
 %
 %(c) ownership types, alias control.
 %
-\def\clocked{{\tt clocked}}
 The following section presents example uses of constrained types
 using several different
 constraint systems.
+%
+Many common object-oriented
+idioms and
+object-oriented type systems can be captured naturally using
+constrained types: specifically we discuss types for places,
+aliases,
+ownership, arrays and clocks. We have implemented the type
+system
+
 %
 \ref{TODO}
 Many of these constraint systems are more
@@ -64,23 +72,17 @@ Constraints also naturally permit the expression of existential types:
   }
 \end{displayxten}
 \noindent
-Here, the length of the list returned by the {\tt filter} method is 
+Here, the length of the list returned by the \xcd{filter} method is 
 unknown, but is bound by the length of the original list.
 }
 
-\subsection{Equality constraints: ownership types}
-
-A constraint system that supports disequalities can be used to
-enforce a non-null invariant on reference types.
-A non-null type {\tt C} can be written simply as {\tt C(:self != null)}.
-
-\subsection{Disequalities: non-null types}
-
+\if 0
 \subsection{Presburger constraints: array bounds}
 
 Xi and Pfenning proposed using dependent types for eliminating
 array bounds checks~\cite{xi98array}.
-In CFJ, an array of type {\tt T[]} indexed by (signed) integers
+\Xten{} does not (yet) support generic types, however, a 
+In CFJ, an array of type \xcd{T[]} indexed by (signed) integers
 can be modeled as a class with the following
 signature:\footnote{For this example, we assume generics
 are supported.}
@@ -95,11 +97,8 @@ Bounds can be checked using a constraint system based on
 Presburger arithmetic~\cite{omega}.  Constraint terms include
 integer constraints, scalar multiplication, and addition;
 constraints include inequalities:
+\fi
 
-\begin{tabular}{rrcl}
-(C Term) & {\tt t} &::=& {\tt n} \bnf {\tt n*t} \bnf {\tt t+t} \bnf \dots \\
-(Constraint) & {\tt c} &::=& {\tt t <= t} \bnf \dots
-\end{tabular}
 
 \eat{
 Some code that iterates over an array (sugaring {\tt get} and {\tt set}):
@@ -129,7 +128,7 @@ double[](:length = x.length) saxpy(double a, double[] x, double[] y : x.length =
 \end{xten}
 }
 
-\subsection{Presburger constraints: LU factorization}
+\subsection{Presburger constraints: blocked LU factorization}
 
 \subsection{Set constraints: region-based arrays}
 
@@ -138,10 +137,10 @@ do no occur.
 Following ZPL~\cite{ZPL}, arrays in \Xten{}
 are defined over sets of $n$-dimensional {\em index points}
 called {\em regions}~\cite{gps06-arrays}.
-For instance, the region {\tt [0:200,1:100]} specifies a
-collection of two-dimensional points {\tt (i,j)} with {\tt i}
-ranging from {\tt 0} to {\tt 200} and {\tt j} ranging from
-{\tt 1} to {\tt 100}.
+For instance, the region \xcd{[0:200,1:100]} specifies a
+collection of two-dimensional points \xcd{(i,j)} with \xcd{i}
+ranging from \xcd{0} to \xcd{200} and \xcd{j} ranging from
+\xcd{1} to \xcd{100}.
 
 Constrained types ensure array bounds
 violations do not occur:
@@ -160,7 +159,7 @@ determined to be in the region over which the array is defined.
 Region constraints are subset constraints and have the following syntax:
 
 \begin{tabular}{rrcl}
-  (Constraint)   &{\tt c} &::=& ${\tt r} \subseteq {\tt r}$ \bnf \dots \\
+  (Constraint)   &\xcd{c} &::=& $\xcd{r} \subseteq \xcd{r}$ \bnf \dots \\
   (Region) &{\tt r} &::=& {\tt t} \bnf [${\tt b}_1$:${\tt d}_1$,\ldots,${\tt b}_k$:${\tt d}_k$] \bnf  \\
            &        &   & {\tt r|r} \bnf {\tt r{\&}r} \bnf {\tt r-r} \bnf {\tt r+p} \\
   (Point)  &{\tt p} &::=& ${\tt t} \bnf [{\tt b}_1,\ldots,{\tt b}_k]$ \\
@@ -331,20 +330,87 @@ void quicksort(T[] array, int left, int right : left <= right) {
 This example is due to Satish Chandra. We wish to specify a balanced
 distributed tree with the property that its right child is always at
 the same place as its parent, and once the left child is at the same
-place then the entire subtree is at that place. (Recall that in
-\Xten{} every reference class has a field {\tt location} of type {\tt place} which specifies the location at which this object is located.)
-
+place then the entire subtree is at that place.  In
+\Xten{}, every object has a field {\tt location} of type
+{\tt place} that specifies the location at which the object is located.
+%
 The desired property may be specified thus:
-\begin{xten}
+\begin{displayxten}
 class Tree(boolean localLeft) extends Object {
-  Tree(:! this.localLeft || (location=here && self.localLeft)) left; 
-  Tree(:location=here) right);
+  Tree(:! this.localLeft || (location==here && self.localLeft)) left; 
+  Tree(:location==here) right);
   ...
 }
-\end{xten}
-\noindent Note that the consequent of the condition for {\tt left} 
-sets {\tt self.localLeft}. This ensures, recursively, that the entire
+\end{displayxten}
+The constraint on \xcd{left} states that if
+the \xcd{localLeft} property is true, then the location 
+of the \xcd{left} child must be \xcd{here} and its
+\xcd{localLeft} property must be set.
+This ensures, recursively, that the entire
 left subtree will be located at the same place.
+
+\subsection{Ownership constraints}
+
+\begin{figure}
+\inputxten{LO.x10}
+\caption{Ownership types}
+\label{fig:ownership}
+\end{figure}
+
+Figure~\ref{fig:ownership} shows a fragment of a \xcd{List} class, 
+demonstrating how ownership
+types~\cite{ownership-types} can be encoded as constrained
+types using a simple extension of \Xten{}'s built-in equality
+constraint system.
+
+Each \xcd{Owned} object has an \xcd{owner} property.
+Objects also have properties that are used as owner parameters.
+%
+The \xcd{List} class has an \xcd{owner} property inherited from
+\xcd{Owned} and also declares a \xcd{valOwner} property that is
+instantiated with the owner of the values in the list, stored
+in the \xcd{head} field of each element.
+The \xcd{tail} of the list is owned by the list object itself.
+
+To encode the ``owners as dominators'' property, the owner of
+the values \xcd{valOwner} must be contained within the owner
+of the list itself; that is, \xcd{valOwner} must be \xcd{owner}
+or \xcd{valOwner}'s owner must be contained in \xcd{owner}.
+This is captured by the constraint \xcd{self.owns(owner)} on
+\xcd{valOwner}.  Calls to the \xcd{owns} method in constraints
+are interpreted by the ownership constraint solver as the
+disjunction of conditions shown in the body of \xcd{owns}.
+The object \xcd{world} is the root of the ownership tree; 
+all objects are transitively owned by \xcd{world}.
+
+For example, the type \xcd{List(:owner==world & valOwner == this)}
+is invalid, because
+its constraint is interpreted as
+\xcd{owner == world & valOwner == this & this.owns(world)},
+which is satisfiable only when \xcd{this == world} (which it is not).
+
+An additional check is needed to ensure objects owned by
+\xcd{this} are encapsulated.
+The \xcd{tail()} method for instance, incorrecty leaks the
+list's \xcd{tail} field.  To eliminate this case, the ownership
+constraint system must additionally check that owner parameters
+are bound only to 
+\xcd{this}, \xcd{world}, or an owner property of \xcd{this}.
+These conditions ensure that \xcd{tail()} can be called only on
+\xcd{this} because its return type is otherwise not valid.
+For instance, in the following code, the type of \xcd{ys} is
+not valid because the \xcd{owner} property is bound to \xcd{xs}:
+\begin{displayxten}
+    final Owned o = ...;
+    final List(:owner==o & valOwner==o) xs;
+    List(:owner==xs & valOwner==o) ys = xs.tail();
+\end{displayxten}
+
+\subsection{Disequalities: non-null types}
+
+A constraint system that supports disequalities can be used to
+enforce a non-null invariant on reference types.
+A non-null type \xcd{C} can be written simply as \xcd{C(:self != null)}.
 
 \eat{
 \subsection{Clocked types}
@@ -354,12 +420,11 @@ dynamically created, and are designed so that all clock operations are
 determinate.
 
 For each arity $n$, we introduce a {\em Gentzen predicate}
-${\tt 
-clocked(\bar{t})}$. A $k$-ary Gentzen predicate $a$ satisfies the
+${\tt clocked(\bar{t})}$. A $k$-ary Gentzen predicate $a$ satisfies the
 property that $a(t_1,\ldots, t_k) \vdash a(s_1,\ldots,s_n)$ iff $k=n$
 and $t_i=s_i$ for $i\leq k$.
 
-Such a {\tt clocked} atom is added to the context by an {\tt clocked async}:
+Such a \xcd{clocked} atom is added to the context by an \xcd{clocked async}:
 $$
 \from{\Gamma, {\tt clocked(\bar{\tt v})} \vdash {\tt T}\ {\tt e}}
 \infer{\Gamma \vdash {\tt T}\ {\tt async}\ {\tt clocked}(\bar{\tt v}) {\tt e}}
@@ -367,7 +432,7 @@ $$
 
 A programmer can require that a method may be invoked only if the
 invoking activity is registered on the clocks $\bar{\tt k}$ by adding
-a {\tt clocked} clause. The rule for method elaboration and method invocation then change:
+a \xcd{clocked} clause. The rule for method elaboration and method invocation then change:
 $$
 \begin{array}{l}
 \from{ \bar{\tt T}\ \bar{\tt x}, {\tt C}\ \this, {\tt c},\clocked(\bar{\tt k}) \vdash {\tt S}\ {\tt e}, {\tt S} \subtype {\tt T} }   
@@ -509,78 +574,6 @@ extensions:
 1. add thread to context
 2. strengthen T-field rule
 }
-}
-
-\eat{
-\subsection{Ownership types}
-
-\begin{figure}
-\input{LO}
-\caption{Ownership types}
-\label{fig:ownership}
-\end{figure}
-
-Figure~\ref{fig:ownership} shows
- a fragment of {\tt List} class, 
-demonstrating how ownership
-types~\cite{ownership-types} can be encoded in CFJ.
-Each {\tt Owned} object has an {\tt owner} property.
-Objects also have properties used as owner parameters.
-The {\tt List} class has a property {\tt valOwner} that is
-instantiated with the owner of the values in the list, stored
-in the {\tt head} field of each element.
-The {\tt tail} of the list is owned by the list object itself.
-
-To enforce the ``owners as dominators'' property, the owner of
-the values {\tt valOwner} must be contained within the owner
-of the list itself; that is, {\tt valOwner} must be {\tt owner}
-or {\tt valOwner}'s owner must be contained in {\tt owner}.
-This is captured by the constraint {\tt owner owns valOwner}.
-
-The {\tt expose} method incorrectly leaks the
-list's {\tt tail} pointer.
-The constraint system catches this XXX.
-Variables must be {\tt T(:owner=o, this owns o) x;}?
-
-Additional rules need to be imposed to enforce the ``owners as
-dominators'' property.
-
-If a class subclasses {\tt Owned}, its owner parameters must
-be transitively owned themselves by the {\tt owner} property.
-
-Second, permit this to be visible only within the current
-object.
-
-{\footnotesize
-\begin{verbatim}
-e0 : T0
-_e : _S
-mtype(T0, m) = (_x:_T) -> T'
-_S <: _T[this(e0)/this]
---------------
-e0.m(_e) : T'[this(e0)/this]
-\end{verbatim}}
-
-Need to prevent fields owned by {\tt this} escaping.
-When type-checking code in class {\tt C}, need to add {\tt C}
-to assumptions.
-
-When checking calls and field accesses, only allow substitution
-for {\tt this} when {\tt this} is the receiver.
-
-\[
-\rname{T-Field-Owner}%
-\from{
-\begin{array}{lll}
-\Gamma \vdash {\tt T}_0\ {\tt e} &
-\mathit{fields}({\tt T}_0,{\tt z}_0)= \bar{\tt U}\ \bar{\tt f}_i &
-\mbox{(${\tt z}_0$ fresh)} \\
-\Gamma \vdash {\tt T}_0 \subtype {\tt C}(: {\tt owner} = {\tt this}) &
-XXX
-\end{array}
-}
-\infer{\Gamma \vdash ({\tt T}_0\ {\tt z}_0; {\tt z}_0.{\tt f}_i=\self;{\tt U}_i)\ {\tt e.f}_i}
-\]
 }
 
 \eat{
