--- a/trunk/x10.man/paper/lang.tex
+++ b/trunk/x10.man/paper/lang.tex
@@ -2,7 +2,7 @@ This section describes constrained types in \Xten{}.
 
 \subsection{Properties}
 
-A property is a {\tt public} {\tt final} instance field of the
+A property is a \xcd{public} \xcd{final} instance field of the
 class that cannot be overridden by subclassing. Like any other field,
 a property is typed, and its type need not necessarily be
 primitive. Thus, properties capture the immutable public state of an
@@ -12,12 +12,13 @@ specified in a parameter list right after the name of the class in a
 class definition. The class body may contain specifications of other
 fields; these fields are considered mutable.
 
-Properties may be of arbitrary type. For instance, the class {\tt
-region} has an {\tt int} property called {\tt rank}. In turn, the
-class {\tt dist} has a {\tt region} property, called {\tt region}, and
-also an {\tt int} property {\tt rank}.  The invariant for {\tt dist}
-ensures that {\tt rank == region.rank}. Similarly, an array has
-properties {\tt dist}, {\tt region}, and {\tt rank}
+Properties may be of arbitrary type. For instance, the class
+\xcd{
+region} has an \xcd{int} property called \xcd{rank}. In turn, the
+class \xcd{dist} has a \xcd{region} property, called \xcd{region}, and
+also an \xcd{int} property \xcd{rank}.  The invariant for \xcd{dist}
+ensures that \xcd{rank == region.rank}. Similarly, an array has
+properties \xcd{dist}, \xcd{region}, and \xcd{rank}
 and appropriate constraints ensuring that the statically available
 information about them is consistent.\footnote{All constraint
 languages used in constrained types permit object references, field
@@ -31,25 +32,33 @@ the object reference graph, rooted at the current object and utilizing
 objects at user-defined types, may be specified.
 
 \subsection{Constraints}
-A constrained type is of the form {\tt
-C(:e)}, consisting of a {\em base class} {\tt C} and a {\em
-condition} {\tt e}, a boolean expresion on the properties of the
-base class and the {\tt final} variables in scope at the type.
-Constraints specify (possibly) partial information about the
-variables of interest.
-Such a type represents a refinement of {\tt C}---the set of all
-instances of {\tt C} whose immutable state satisfies the condition
-{\tt c}.
+A constrained type is of the form \xcd{C(:e)}, consisting of a
+{\em base class} \xcd{C} and a {\em condition} \xcd{e}, a
+boolean expresion on the properties of the base class and the
+\xcd{final} variables in scope at the type.  Constraints specify
+(possibly) partial information about the variables of interest.
+Such a type represents a refinement of \xcd{C}---the set of all
+instances of \xcd{C} whose immutable state satisfies the
+condition \xcd{c}.
 
-Constraints may use the special variable {\tt self} to stand for
-the object whose type is being defined. Thus, {\tt int(:self >= 0)} is
-the set of natural numbers, and {\tt point(:x*x + y*y <= 1.0)}
-represents the interior of a circle (for a class {\tt point} with two
-{\tt float} properties {\tt x} and {\tt y}). The type {\tt C(:self !=
-null)} represents all instances of {\tt C}. When there is no
-ambiguity, a property reference {\tt self.x} may be abbreviated to {\tt
-x}. The type {\tt int(:self==v)} represents a ``singleton'' type, an
-{\tt int} is of this type only if it has the same value as {\tt v}.
+Constraints may use the special variable \xcd{self} to stand for
+the object whose type is being defined. Thus, \xcd{int(:self >= 0)} is
+the set of natural numbers, and \xcd{point(:x*x + y*y <= 1.0)}
+represents the interior of a circle (for a class \xcd{point} with two
+\xcd{float} properties \xcd{x} and \xcd{y}). The type \xcd{C(:self !=
+null)} represents all instances of \xcd{C}. When there is no
+ambiguity, a property reference \xcd{self.x} may be abbreviated
+to \xcd{x}. The type \xcd{int(:self==v)} represents a ``singleton'' type, an
+\xcd{int} is of this type only if it has the same value as \xcd{v}.
+
+To be clear, \xcd{self} is not the same as \xcd{this}.  In the
+\xcd{List} example of Figure~\ref{fig:list-example}, a list
+a list with type
+\xcd{List(:self.n <= this.n)} is returned by the 
+\xcd{filter} method:  \xcd{self.n} is the length of
+the returned \xcd{List}; \xcd{this.n} is the length of the 
+receiver of the call to \xcd{filter}.
+
 
 Constraints are specified in terms of an underlying
 constraint system~\cite{CCCC}---a pre-defined logical vocabulary of
@@ -69,7 +78,7 @@ decidable.
 The condition of a constrained type must be a pure
 function only of the properties of the base class.
 Because properties are
-{\tt final} instance fields of the object,
+\xcd{final} instance fields of the object,
 this requirement
 ensures that whether or not an object belongs to a constrained type does
 not depend on the {\em mutable} state of the object.
@@ -84,10 +93,12 @@ explicitly} allocate memory in the object for such fields. For
 instance, it may use some scheme of tagged pointers to implicitly
 encode the values of these fields.
 
-Further, by requiring that the programmer distinguish certain {\tt
+Further, by requiring that the programmer distinguish certain
+\xcd{
 final} fields of a class as properties, we ensure that the programmer
-consciously controls {\em which} {\tt final} fields should be available for
-constructing constrained types. A field that is ``accidentally'' {\tt
+consciously controls {\em which} \xcd{final} fields should be available for
+constructing constrained types. A field that is ``accidentally''
+\xcd{
 final} may not be used in the construction of a constrained type. It must be
 declared as a property.
 
@@ -96,14 +107,14 @@ declared as a property.
 Constrained types naturally come equipped with a subtype relation that
 combines the nominal subtyping relation of classes and interfaces with
 the logical entailment relation of the constraint system. Namely, a
-constraint {\tt C(:c)} is a subtype of {\tt D(:d)} if {\tt C} is a
-subtype of {\tt D} and every value in {\tt C} that satisfies {\tt c}
-also satisfies {\tt d}.
+constraint \xcd{C(:c)} is a subtype of \xcd{D(:d)} if \xcd{C} is a
+subtype of \xcd{D} and every value in \xcd{C} that satisfies \xcd{c}
+also satisfies \xcd{d}.
 
 % Thus, the set of constrained types on a base
-% type {\tt C} inherits a lattice structure from the underlying
-% constraint system. The maximal element is {\tt C(:true)}, which is
-% just {\tt C}, and the minimal element is the unsatisfiable constraint.
+% type \xcd{C} inherits a lattice structure from the underlying
+% constraint system. The maximal element is \xcd{C(:true)}, which is
+% just \xcd{C}, and the minimal element is the unsatisfiable constraint.
 
 % Constrained types naturally come equipped with a {\em subtyping
 % structure}: type $t_1$ is a subtype of $t_2$ if the denotation of
@@ -111,44 +122,29 @@ also satisfies {\tt d}.
 This definition 
 % satisfies Liskov's Substitution Principle~\cite{liskov-behaviors}) and
 implies that
-{\tt C(:e1)} is a subtype of {\tt C(:e2)} if {\tt e1} implies {\tt e2}.
-In particular, for all conditions {\tt e},
-{\tt C(:e)} is a subtype of {\tt C}.
-{\tt C(:e)} is empty exactly
-when {\tt e} conjoined with {\tt C}'s class invariant is inconsistent.
+\xcd{C(:e1)} is a subtype of \xcd{C(:e2)} if \xcd{e1} implies \xcd{e2}.
+In particular, for all conditions \xcd{e},
+\xcd{C(:e)} is a subtype of \xcd{C}.
+\xcd{C(:e)} is empty exactly
+when \xcd{e} conjoined with \xcd{C}'s class invariant is inconsistent.
 
-Two constrained types {\tt C1(:e1)} and {\tt C2(:e2)} are considered
-equivalent if {\tt C1} and {\tt C2} are the same base type and {\tt
-e1} and {\tt e2} are equivalent when considered as logical
-expressions. Thus {\tt C(:x*x=4)} and {\tt C(:x=2 || x=-2)} are
+Two constrained types \xcd{C1(:e1)} and \xcd{C2(:e2)} are considered
+equivalent if \xcd{C1} and \xcd{C2} are the same base type and
+\xcd{
+e1} and \xcd{e2} are equivalent when considered as logical
+expressions. Thus, \xcd{C(:x*x==4)} and \xcd{C(:x==2 || x==-2)} are
 equivalent types.
 
-Constrained types may occur wherever normal types occur. In
-particular, they may be used to specify the types of (possibly
-mutable) local variables, properties, (possibly mutable) fields,
-arguments to methods, return types of methods, in casts etc.  Note
-that final local variables as well as final parameters of methods may
-be used to define types. Specifically all the final parameters of a
-method are in scope at the return type of the method and can be used
-to construct the return type.
-
-For example, a method that multiplies two matrices may be specified by:
-\begin{displayxten}
-    class Matrix(int I, int J) {
-      Matrix(I, arg.J) mul(final Matrix(:self.I==this.J) arg) 
-      {...}
-      ...
-    }
-\end{displayxten}
-
 \subsection{Final variables}
-The use of final variables (local variables, method arguments) in
+
+The use of \xcd{final} local variables, formal parameters, and
+fields in constrained
 types has proven to be particularly valuable in practice. The same
 variable that is being used in computation can also be used to specify
 types. There is no need to introduce separate, universally and
 existentially quantified ``index'' variables.
-
-During type-checking, final variables are turned into symbolic
+%
+During type-checking, \xcd{final} variables are turned into symbolic
 variables---some fixed but unknown value---of the same type.
 Computation is performed in a constraint-based fashion on such
 variables.
@@ -159,26 +155,23 @@ Methods and constructors may specify preconditions on their parameters
 as where clauses.  For an invocation of a method (or constructor) to
 be type-correct, the associated where clause must be statically known
 to be satisfied. Note that the where clause may contain constraints on
-the properties of {\tt this}. Thus the where clause may be used to
+the properties of \xcd{this}. Thus the where clause may be used to
 specify that a method is {\em conditionally} available on some objects
 of the class and not others.
 
 The
 return type of a method may also contain expressions involving the
-arguments to the method. However, we will require
-that any argument used in this way must be declared {\tt final},
-ensuring it is not mutated by the method body.
-For instance:
-\begin{verbatim}
-  List(arg.length-1)
-    tail(final List arg : arg.length > 0) {...}
-\end{verbatim}
-\noindent will be a valid method declaration. It says that
-{\tt tail} must be passed a non-empty list, and it returns a list
+arguments to the method.  Any argument used in this way must
+be declared \xcd{final},
+ensuring it is not mutated by the method body.  For instance:
+\begin{displayxten}
+  List(arg.length-1) tail(final List arg : arg.length > 0) {...}
+\end{displayxten}
+\noindent is a valid method declaration. It says that
+\xcd{tail} must be passed a non-empty list, and it returns a list
 whose length is one less than its argument.
 
-
-\subsection{Method overloading}
+\subsection{Method overloading and overriding}
 
 The definitions of method overloading, overriding, hiding,
 shadowing and obscuring in \Xten{} are the same as in
@@ -191,26 +184,12 @@ must be the case that a class does not have two different method
 definitions that conflict with each other when the constrained
 clauses in their types are erased.
 
-\if 0
-The definition of a method declaration {\tt m1} ``having the same
-signature as'' a method declaration {\tt m2} involves identity of
-types. Two \Xten{} types are defined to be identical iff they are
-equivalent.  Two methods are said to have {\em the same signature} if
-(a) they have the same number of formal parameters, (b) for each
-parameter their types are equivalent, and (c) the constraints
-associated with their parameter list (if any) are equivalent.  It is a
-compile-time error for there to be two methods with the same name and
-same signature in a class (either defined in that class or in a
-superclass).
-\fi
-
-A class {\tt C} inherits from its direct superclass and
-superinterfaces all their methods visible according to the access
-restriction modifiers public/private/protected/(package) of the
-superclass/superinterfaces that are not hidden or overridden. A method
-{\tt M1} in a class {\tt C} overrides a method {\tt M2} in a
-superclass {\tt D} if {\tt M1} and {\tt M2} have the same signature.
-Methods are overridden on a signature-by-signature basis.
+A class \xcd{C} inherits from its direct superclass and
+superinterfaces all their methods that are visible according to the access
+modifiers and that are not hidden or overridden. A method
+\xcd{m1} in a class \xcd{C} overrides a method \xcd{m2} in a
+superclass \xcd{D} if \xcd{m1} and \xcd{m2} have signatures
+with equivalent (unerased) formal parameter types. 
 
 Dynamic method lookup does not take dependent type information into
 account, only the class hierarchy. This design decision ensures that
@@ -220,6 +199,7 @@ methods with the same name and acceptable argument lists might be
 available at the dynamic dependent type of the subject. Examples are
 not difficult to construct.)
 
+\eat{
 The current \Xten{} compiler produces \Java{} code. It further
 implements the restriction that no two methods for the same class can
 have the same signature after their constraints are erased. This
@@ -227,37 +207,41 @@ simplifies implementation---no name mangling is needed to preserve
 the dependent type distinction in the generated \Java{} code.
 However, this approach does cut down on the usefulness of constrained
 clauses for method dispatch.
+}
 
 \subsection{Constructors for dependent classes}
 
+\eat{
 Like a method definition,
 a constructor may
 specify preconditions on its arguments
 and a postcondition on the value produced by the constructor.
-
+%
 Postconditions may be specified in a constructor declaration between
 the name of the class and the argument list of the constructor using a
 where clause. The where clause can reference only the properties of
 the class.
+}
 
+Constructors must ensure that the class invariants of the given
+class and its superclasses and superinterfaces hold.
 For instance, the
-nullary constructor for {\tt List} ensures that the property
-{\tt length} has the value {\tt 0}:
-{\footnotesize
-\begin{verbatim}
+nullary constructor for \xcd{List} ensures that the property
+\xcd{length} has the value \xcd{0}:
+\begin{displayxten}
     public List(0)() { property(0); }
-\end{verbatim}}
-The {\tt property} statement is used to set all the properties
+\end{displayxten}
+The \xcd{property} statement is used to set all the properties
 of the new object simultaneously.  Capturing this assignment in
 a single statement simplifies checking that the constructor
 postcondition and class invariant are established.  If a class
 has properties, every path through the constructor must contain
-exactly one {\tt property} statement.
+exactly one \xcd{property} statement.
 
 \java{}-like languages permit constructors to throw exceptions. This
 is necessary to deal with the situation in which the arguments to a
-constructor for a class {\tt C} are such that no object can be
-constructed that satisfies the invariants for {\tt C}. Dependent
+constructor for a class \xcd{C} are such that no object can be
+constructed that satisfies the invariants for \xcd{C}. Dependent
 types make it possible to perform some of these checks at
 compile-time. The class invariant of a class explicitly captures
 conditions on the properties of the class that must be satisfied by
@@ -273,13 +257,13 @@ violations at compile-time.
 
 \subsection{Extending dependent classes}
 
-A class may extend a constrained class, e.g.{}
-${\tt \class\ C(\ldots)\ \extends\ D(:d)\ldots}$.
+A class may extend a constrained class, e.g.,
+\xcd{class C(}\dots\xcd{) extends D(:d)}.
 This documents the programmer's intention that
-every call to {\tt super} in a constructor for {\tt C} must ensure
-that the invariant {\tt d} is established on the state of the class
-{\tt D}. The expressions in the actual parameter list for the super
-class may involve only the properties of the class being defind.
+every call to \xcd{super} in a constructor for \xcd{C} must ensure
+that the invariant \xcd{d} is established on the state of the class
+\xcd{D}. The expressions in the actual parameter list for the super
+class may involve only the properties of the class being defined.
 
 %{\em MetaNote: This should be standard. A class definition may extend
 %a dependent super class, e.g. class Foo(int i) extends Fum(i*i) \{
@@ -292,8 +276,8 @@ class may involve only the properties of the class being defind.
 
 \java{} does not allow interfaces to specify instance fields. Rather all
 fields in an interface are final static fields (constants).
-
-Since properties play a central role in the specification of
+However,
+since properties play a central role in the specification of
 refinements of a type, it makes sense to permit interfaces to specify
 properties.
 Similarly, an interface
@@ -311,17 +295,17 @@ property. The class must have a single property with the given name
 and type.
 
 The general form of a class declaration is now:
-\begin{verbatim}
+\begin{displayxten}
   class C(T1 x1, ..., Tk xk)
         extends B(:c)
         implements I1(:c1), ..., In(:cn) {...}
-\end{verbatim}
+\end{displayxten}
 \noindent
-
 For such a declaration to type-check, it must be that the class
-invariant implies {\tt \inv(I), c}, where {\tt \inv(I)} is the
-invariant associated with interface {\tt I}.  Again, a constrained
-class or interface {\tt I} is taken as shorthand for {\tt I(:true)}.
+invariant of \xcd{C} implies \inv(\xcd{Ii})\xcd{\ & ci}, where
+\inv(\xcd{Ii}) is the
+invariant associated with interface \xcd{Ii}.  Again, a constrained
+class or interface \xcd{I} is taken as shorthand for \xcd{I(:true)}.
 Further, every method specified in the interface must have a
 corresponding method in the class with the same signature whose
 precondition, if any, is implied by the precondition of the method in
@@ -334,40 +318,47 @@ Our design distinguishes between compile-time execution (performed
 during type-checking) and run-time execution. At compile-time, the
 compiler processes the abstract syntax tree of the program generating
 queries to the constraint solver. The only computation engine running
-is the constraint-solver, which operates on its own vocabulary of
+is the constraintnsolver, which operates on its own vocabulary of
 predicates and functions. Program variables (such as local variables)
 that occur in types are dealt with symbolically. They are replaced
 with logical variables---some fixed, but unknown value---of the same
-type. The constraint-solver knows how to process pieces of partial
+type. The constraint solver must know how to process pieces of partial
 information about these logical variables in order to determine
-whether some constraint is entailed. At runtime, the same program
+whether some constraint is entailed. At run time, the same program
 variable will have a concrete value and will perform ``arithmetic''
 (calculations) where the compiler performed ``algebra'' (symbolic
 analysis).
 
+Constrained types may occur in a class cast \xcd{(T) o}.  Code is
+generated to check at run time that \xcd{o} satisfies \xcd{T}.
 
 \subsection{Query evaluation}
 
 Because object-oriented languages permit arbitrary mutual recursion between
-classes: classes {\tt A} and {\tt B} may have fields of type {\tt B} and
-{\tt A} respectively---the type/property graph may have loops. The nodes
+classes: classes \xcd{A} and \xcd{B} may have fields of type \xcd{B} and
+\xcd{A} respectively---the type/property graph may have loops. The nodes
 in this graph are base types (class and interface names). There is an
-edge from node {\tt A} to node {\tt B} if {\tt A} has a property whose
-base type is {\tt B}.
+edge from node \xcd{A} to node \xcd{B} if \xcd{A} has a property whose
+base type is \xcd{B}.
 
-Let us define the real-clause of a constrained type {\tt C(:c)} to be
-the set of constraints that must be satisfied by any instance of {\tt
-C(:c)}. This includes {\tt c} but also includes constraints that hold
-for all instances of {\tt C}, as determined by the definition of {\tt
-C}. Let us use the notation $\rc({\tt C})$ for the {\em real clause} of {\tt
+Let us define the real-clause of a constrained type \xcd{C(:c)} to be
+the set of constraints that must be satisfied by any instance of
+\xcd{
+C(:c)}. This includes \xcd{c} but also includes constraints that hold
+for all instances of \xcd{C}, as determined by the definition of
+\xcd{
+C}. Let us use the notation $\rc({\tt C})$ for the {\em real
+clause} of \xcd{
 C}. Since we consider only top-level classes, the only free variable in
-$\rc({\tt C})$ is {\tt self}.
+$\rc({\tt C})$ is \xcd{self}.
 
 \ref{TODO} not clear, esp. what X is
 
-What is $\rc({\tt C}, {\tt X})$ (we have drawn out {\tt X} as the
+What is $\rc({\tt C}, {\tt X})$ (we have drawn out \xcd{X} as the
 formal variable)? Consider a general class definition:
-$$\class\ {\tt C}(\bar{\tt T}\ \bar{\tt x} : c)~\extends\ D(:d)\ \{\bar{M}\}$$
+\begin{displayxten}
+class C(T1 x1, ..., Tk xk: c) extends D(:d) { ... }
+\end{displayxten}
 
 \noindent Clearly, from this we get:
 
@@ -411,12 +402,12 @@ types wherever appropriate.
 
 \subsection{Parametric consistency}
 
-Consider the set of final variables that are referenced in a type
-\xcd{T=C(:c)}. These are the {\em parameters} of the type. A type is said
-to be {\em parametrically consistent} if its where clause is solvable
-for each possible assignment of values to parameters.  A
-parametrically consistent type has the property that its extension
-will never be empty. 
+Consider the set of final variables that are referenced in a
+type \xcd{T} = \xcd{C(:c)}. These are the {\em parameters} of
+the type. A type is said to be {\em parametrically consistent}
+if its where clause is solvable for each possible assignment of
+values to parameters.  A parametrically consistent type has the
+property that its extension will never be empty. 
 
 Types are required to be parametrically consistent.
 
@@ -426,21 +417,17 @@ Consider  a variation of List from Figure~\ref{fig:list-example}:
 \begin{displayxten}
 class List(int(:self >= 0) n) {
   Object head;
-  List(n-1: self!= null) tail;
+  List(:self.n == this.n-1 & self != null) tail;
   ...
 }
 \end{displayxten}
 The type of the field \xcd{tail} is not parametrically
 consistent. There exists a value for its parameter \xcd{n}, namely,
-\xcd{0} for which the where clause \xcd{self != null =>
-(self.n=this.n-1, self.n >= 0), self!=null} is not satisfiable.
+\xcd{0} for which the real clause \xcd{self != null &
+self.n == this.n-1 & self.n >= 0} is not satisfiable.
 
 The compiler will throw a type error when it encounters the
 initializer for this field in a constructor since it will not be able
 to prove that the initial value is of the given type.
 
-
-\subsection{Run-time type casts}
-Constrained types may occur in a class cast {\tt (T) o}.  Code is
-generated to check at runtime that {\tt o} satisfies {\tt T}.
 
