--- a/trunk/x10.man/paper/paper.tex
+++ b/trunk/x10.man/paper/paper.tex
@@ -35,7 +35,7 @@
    morestring=[b]',%
   }
 
-\newcommand\codestyle\sf
+\newcommand\codestyle\tt
 
 \lstnewenvironment{displayxten}
   {\lstset{language=X10,basicstyle=\codestyle\footnotesize,tabsize=4,columns=fullflexible,captionpos=b,xleftmargin=1em,xrightmargin=1em}}
